Code highlight example - Text component

--- a/clientlibs/base.less
+++ b/clientlibs/base.less
@@ -15,3 +15,5 @@
 @import (once) "components/image/image.less";
 @import (once) "components/search/search.less";
 
+/* Import code highlighting */
+@import (less) "vendor/highlight/styles/github.css";
