--- a/components/text/text.html
+++ b/components/text/text.html
@@ -103,9 +103,7 @@
             <li>In eros elit, rutrum non sodales et, feugiat quis purus. </li>
         </ol>
         <p>In <a title="A link" href="http://www.adobe.com" target="_blank">pretium lectus et metus</a> eleifend, in tempor arcu egestas. Aenean rhoncus egestas orci, in tristique lacus. Ut ultrices consequat eleifend. Sed a est libero. Integer condimentum posuere lorem, ac porta dui ultrices feugiat. Etiam et leo lacus. Donec porttitor ut magna non tristique. Nunc at tempor massa.</p>
-        <pre>
-Nullam purus dolor, ornare a enim sit amet, iaculis maximus mi. Nullam elementum lectus in ligula fringilla, vitae dapibus odio posuere. Duis et faucibus lorem, a pellentesque urna. Aliquam eu efficitur enim.
-</pre>
+        <pre>Nullam purus dolor, ornare a enim sit amet, iaculis maximus mi.</pre>
         <p>Aliquam mauris nibh, ultricies ac viverra eget, ultrices ut turpis. Vestibulum fringilla, nibh vestibulum lobortis condimentum, ligula turpis placerat nisl, quis finibus sem enim eu orci. Integer sollicitudin, risus eu venenatis egestas, lorem tortor tristique neque, eget ultrices ex massa quis lectus. </p>
         <blockquote>Donec quis sapien sapien. Nullam at tortor ac orci eleifend pulvinar. Maecenas dapibus, nulla nec cursus tincidunt, lectus leo laoreet dolor, eget ullamcorper leo eros non lorem. Etiam sollicitudin, lectus id ultricies molestie, quam ante bibendum felis, quis egestas nisi ante vel urna. </blockquote>
         <p>Nam massa elit, iaculis vitae pharetra quis, ultricies sed dolor. Curabitur sed congue sapien, eget porttitor sapien. Pellentesque congue dui et scelerisque tempus.</p>
