--- a/components/list/list.html
+++ b/components/list/list.html
@@ -96,104 +96,111 @@
                       <!-- Title Component -->
                     <div class="title aem-GridColumn aem-GridColumn--default--4">
                         <div class="cmp-title">
-                            <h3 class="cmp-title__text">List w/ Link + Date</h3>
+                            <h3 class="cmp-title__text">List with Link &amp; Date</h3>
                         </div>    
                     </div>
                     
                      <!-- Title Component -->
                     <div class="title aem-GridColumn aem-GridColumn--default--4">
                         <div class="cmp-title">
-                            <h3 class="cmp-title__text">List w/ Link + Date + Description</h3>
+                            <h3 class="cmp-title__text">List with Link, Date &amp; Description</h3>
                         </div>    
                     </div>
-                    
-                    <!-- Plain List -->
-                    <div class="list aem-GridColumn aem-GridColumn--default--4">
-                        <ul class="cmp-list">
-                            <li class="cmp-list__item">
-                                <article>
-                                    <span class="cmp-list__item-title">List Item 1</span>
-                                </article>
-                            </li>
-                            <li class="cmp-list__item">
-                                <article>
-                                    <span class="cmp-list__item-title">List Item 2</span>
-                                </article>
-                            </li>
-                            <li class="cmp-list__item">
-                                <article>
-                                    <span class="cmp-list__item-title">List Item 3</span>
-                                </article>
-                            </li>
-                        </ul>
-                    </div> <!-- end plain list -->
-                    
-                    <!-- Link and Date List -->
-                    <div class="list aem-GridColumn aem-GridColumn--default--4">
-                        <ul class="cmp-list">
-                            <li class="cmp-list__item">
-                                <article>
-                                    <a class="cmp-list__item-link" href="#">
-                                        <span class="cmp-list__item-title">List Item 1</span>
-                                        <!-- Dates can be different formats (yyyy-mm-dd) (per list component) -->
-                                        <span class="cmp-list__item-date">2018-01-31</span> 
-                                    </a>
-                                </article>
-                            </li>
-                            <li class="cmp-list__item">
-                                <article>
-                                     <a class="cmp-list__item-link" href="#">
-                                        <span class="cmp-list__item-title">List Item 2</span>
-                                        <span class="cmp-list__item-date">2018-02-11</span> 
-                                    </a>
-                                </article>
-                            </li>
-                            <li class="cmp-list__item">
-                                <article>
-                                    <a class="cmp-list__item-link" href="#">
-                                        <span class="cmp-list__item-title">List Item 3</span>
-                                        <span class="cmp-list__item-date">2018-02-14</span> 
-                                    </a>
-                                </article>
-                            </li>
-                        </ul>
-                    </div> <!-- end Link+date list -->
-                    
-                    <!-- Link w/ Date + Description List -->
-                    <div class="list aem-GridColumn aem-GridColumn--default--4">
-                        <ul class="cmp-list">
-                            <li class="cmp-list__item">
-                                <article>
-                                    <a class="cmp-list__item-link" href="#">
-                                        <span class="cmp-list__item-title">List Item 1</span>
-                                        <!-- Dates can be different formats (MMM DD) (per list component) -->
-                                        <span class="cmp-list__item-date">Jan 31</span> 
-                                    </a>
-                                    <span class="cmp-list__item-description">an optional description but nice to have.</span>
-                                </article>
-                            </li>
-                            <li class="cmp-list__item">
-                                <article>
-                                     <a class="cmp-list__item-link" href="#">
-                                        <span class="cmp-list__item-title">List Item 2</span>
-                                        <span class="cmp-list__item-date">FEB 11</span> 
-                                    </a>
-                                    <span class="cmp-list__item-description">Lorem ipsum description 2</span>
-                                </article>
-                            </li>
-                            <li class="cmp-list__item">
-                                <article>
-                                    <a class="cmp-list__item-link" href="#">
-                                        <span class="cmp-list__item-title">List Item 3</span>
-                                        <span class="cmp-list__item-date">FEB 14</span> 
-                                    </a>
-                                    <span class="cmp-list__item-description">ipsum description numero three</span>
-                                </article>
-                            </li>
-                        </ul>
-                    </div> <!-- end Link+date list -->
-                    
-                    
+
+<!-- Plain List -->
+<div class="list aem-GridColumn aem-GridColumn--default--4" data-code-target-id="code-1">
+    <ul class="cmp-list">
+        <li class="cmp-list__item">
+            <article>
+                <span class="cmp-list__item-title">List Item 1</span>
+            </article>
+        </li>
+        <li class="cmp-list__item">
+            <article>
+                <span class="cmp-list__item-title">List Item 2</span>
+            </article>
+        </li>
+        <li class="cmp-list__item">
+            <article>
+                <span class="cmp-list__item-title">List Item 3</span>
+            </article>
+        </li>
+    </ul>
+</div> <!-- end plain list -->
+
+<!-- Link and Date List -->
+<div class="list aem-GridColumn aem-GridColumn--default--4"  data-code-target-id="code-2">
+    <ul class="cmp-list">
+        <li class="cmp-list__item">
+            <article>
+                <a class="cmp-list__item-link" href="#">
+                    <span class="cmp-list__item-title">List Item 1</span>
+                    <!-- Dates can be different formats (yyyy-mm-dd) (per list component) -->
+                    <span class="cmp-list__item-date">2018-01-31</span>
+                </a>
+            </article>
+        </li>
+        <li class="cmp-list__item">
+            <article>
+                 <a class="cmp-list__item-link" href="#">
+                    <span class="cmp-list__item-title">List Item 2</span>
+                    <span class="cmp-list__item-date">2018-02-11</span>
+                </a>
+            </article>
+        </li>
+        <li class="cmp-list__item">
+            <article>
+                <a class="cmp-list__item-link" href="#">
+                    <span class="cmp-list__item-title">List Item 3</span>
+                    <span class="cmp-list__item-date">2018-02-14</span>
+                </a>
+            </article>
+        </li>
+    </ul>
+</div> <!-- end Link+date list -->
+
+<!-- Link w/ Date + Description List -->
+<div class="list aem-GridColumn aem-GridColumn--default--4"  data-code-target-id="code-3">
+    <ul class="cmp-list">
+        <li class="cmp-list__item">
+            <article>
+                <a class="cmp-list__item-link" href="#">
+                    <span class="cmp-list__item-title">List Item 1</span>
+                    <!-- Dates can be different formats (MMM DD) (per list component) -->
+                    <span class="cmp-list__item-date">Jan 31</span>
+                </a>
+                <span class="cmp-list__item-description">an optional description but nice to have.</span>
+            </article>
+        </li>
+        <li class="cmp-list__item">
+            <article>
+                 <a class="cmp-list__item-link" href="#">
+                    <span class="cmp-list__item-title">List Item 2</span>
+                    <span class="cmp-list__item-date">FEB 11</span>
+                </a>
+                <span class="cmp-list__item-description">Lorem ipsum description 2</span>
+            </article>
+        </li>
+        <li class="cmp-list__item">
+            <article>
+                <a class="cmp-list__item-link" href="#">
+                    <span class="cmp-list__item-title">List Item 3</span>
+                    <span class="cmp-list__item-date">FEB 14</span>
+                </a>
+                <span class="cmp-list__item-description">ipsum description numero three</span>
+            </article>
+        </li>
+    </ul>
+</div> <!-- end Link+date list -->
+
+                    <!-- HTML Code -->
+                    <div class="aem-GridColumn aem-GridColumn--default--4" data-code-id="code-1"></div>
+
+                    <!-- HTML Code -->
+                    <div class="aem-GridColumn aem-GridColumn--default--4" data-code-id="code-2"></div>
+
+                    <!-- HTML Code -->
+                    <div class="aem-GridColumn aem-GridColumn--default--4" data-code-id="code-3"></div>
                     
                 </div> <!-- main layout container grid -->
             </div><!-- end Main Layout Container div -->
